fix: minor fix